iter block: fix icon position on mobile + move process line on top

--- a/style/blocks/_iter.scss
+++ b/style/blocks/_iter.scss
@@ -4,7 +4,8 @@
 	background-position: center 100px;
 	background-repeat: repeat-y;
 	background-size: 13px auto;
-	padding: 60px $padding__content-mobile 0;
+	margin-top: 50px;
+	padding: 30px $padding__content-mobile 0;
 	margin-left: -#{$padding__content-mobile};
 	margin-right: -#{$padding__content-mobile};
 	display: block;
@@ -16,24 +17,16 @@
 		content: '';
 		display: block;
 	}
-	
-	&:before {
-		position: absolute;
-		top: 0;
-		left: 50%;
-		transform: translateX(-50%);
-		width: 14px;
-		height: 115px;
-		background: $color__background-light;
-	}
 
-	&:after {
+	&:before {
 		background-size: 13px auto;
 		background-repeat: no-repeat;
 		height: 70px;
 		width: 100%;
-		background-image: url('images/steps-bar-end.png');
-		background-position: 50% bottom;
+		background-image: url('images/steps-bar-start.png');
+		background-position: 50% top;
+		position: relative;
+		top: -30px;
 	}
 	
 	.wp-block-svbk-iter__step {
@@ -78,10 +71,9 @@
 
 		svg {
 			fill: $color__corporate;
-			max-width: 60px;
-			max-height: 95px;
-			object-fit: contain;
-			position: relative;
+			max-width: 50px;
+			max-height: 60px;
+			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform: translateX(-50%) translateY(-50%);
@@ -105,17 +97,26 @@
 		padding: 10px $padding__content-tablet 35px $padding__content-tablet + 300px;
 		background-position: $padding__content-tablet + 109px center;
 		max-width: 1100px;
-		
-		&:before {
-			left: 144px;
-			transform: none;
-		}
-		
+
+		&:before,
 		&:after {
 			position: absolute;
+		}
+
+		&:before {
+			top: 0;
 			left: 0;
+			background-position: 144px top;
+		}
+
+		&:after {
+			position: absolute;
 			bottom: 0;
-			background-position: 144px bottom;
+			left: 151px;
+			transform: translateX(-50%);
+			width: 14px;
+			height: 115px;
+			background: $color__background-light;
 		}
 		
 		.wp-block-svbk-iter__step {
@@ -161,6 +162,11 @@
 			transform: translateY(-50%);
 			width: 115px;
 			height: 115px;
+
+			svg {
+				max-width: 70px;
+				max-height: 80px;
+			}
 		}
 		
 		.wp-block-svbk-iter__step-title {
